Fix nav alignment on mobile

--- a/app/styles/nav.less
+++ b/app/styles/nav.less
@@ -74,6 +74,11 @@
 
   .navbar-right {
     padding-right: 15px;
+    @media (max-width: 768px) {
+      & {
+        padding-right: 0;
+      }
+    }
   }
 
 }
